--- a/scss/all-blocks/_hero.scss
+++ b/scss/all-blocks/_hero.scss
@@ -12,7 +12,7 @@
             font-weight: 400;
             font-size: 64px;
             line-height: 125%;
-            color: black;
+            color: #303031;
             margin-bottom: 24px;
         }
 
