--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ button {
 .header ul li a {
   font-weight: 500;
   font-size: 20px;
-  color: black;
+  color: #303031;
 }
 
 .hero {
@@ -72,7 +72,7 @@ button {
   font-weight: 400;
   font-size: 64px;
   line-height: 125%;
-  color: black;
+  color: #303031;
   margin-bottom: 24px;
 }
 .hero .hero-text p {
@@ -92,4 +92,42 @@ button {
   font-size: 18px;
   line-height: 133%;
   color: #FFFFFF;
+}
+
+.section-1 ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 160px;
+}
+.section-1 ul li {
+  border-radius: 8px;
+  width: 427px;
+  height: 340px;
+  box-shadow: 3px 2px 8px 3px rgba(0, 0, 0, 0.1);
+  background: #fff;
+}
+.section-1 ul li a {
+  padding: 64px 24px 64px 24px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.center-text .text h2 {
+  width: 895px;
+  font-size: 48px;
+  text-align: center;
+  color: #303031;
+  margin-top: 160px;
+  margin-bottom: 24px;
+  margin-left: 230px;
+}
+.center-text .text p {
+  width: 895px;
+  font-size: 18px;
+  text-align: center;
+  color: #303031;
+  margin-bottom: 48px;
+  margin-left: 233px;
 }/*# sourceMappingURL=style.css.map */
