--- a/scss/all-blocks/_header.scss
+++ b/scss/all-blocks/_header.scss
@@ -20,7 +20,7 @@
 
                 font-weight: 500;
                 font-size: 20px;
-                color: black;
+                color: #303031;
             }
 
         }
