--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,22 @@ button {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  color: #303031;
+}
+.section-1 ul li a h3 {
+  padding: 24px 30px 16px 30px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 133%;
+  text-align: center;
+}
+.section-1 ul li a p {
+  width: 379px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 144%;
+  text-align: center;
+  margin-bottom: 64px;
 }
 
 .center-text .text h2 {
