--- a/scss/all-blocks/_section-1.scss
+++ b/scss/all-blocks/_section-1.scss
@@ -1,27 +1,47 @@
-.section-1{
+.section-1 {
 
-    ul{
+    ul {
         display: flex;
         align-items: center;
         justify-content: space-between;
         margin-bottom: 160px;
 
-    
 
 
-    li{
-        border-radius: 8px;
-        width: 427px;
-        height: 340px;
-        box-shadow: 3px 2px 8px 3px rgba(0, 0, 0, 0.1);
-background: #fff;
 
-a{
-    padding: 64px 24px 64px 24px;
-display: flex;
-flex-wrap: wrap;
-align-items: center;
-}
+        li {
+            border-radius: 8px;
+            width: 427px;
+            height: 340px;
+            box-shadow: 3px 2px 8px 3px rgba(0, 0, 0, 0.1);
+            background: #fff;
+
+            a {
+                padding: 64px 24px 64px 24px;
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                color: #303031;
+                
+
+                h3 {
+                    
+                    padding: 24px 30px 16px 30px ;
+                    font-weight: 700;
+                    font-size: 24px;
+                    line-height: 133%;
+                    text-align: center;
+                }
+
+                p {
+                    width: 379px;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 144%;
+                    text-align: center;
+                    margin-bottom: 64px;
+                }
+            }
+        }
     }
-}
 }
