--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ button {
   height: 43px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   margin-top: 40px;
 }
 .header ul {
@@ -96,6 +95,7 @@ button {
 
 .section-1 ul {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 160px;
@@ -110,6 +110,7 @@ button {
 .section-1 ul li a {
   padding: 64px 24px 64px 24px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   align-items: center;
   color: #303031;
@@ -146,4 +147,63 @@ button {
   color: #303031;
   margin-bottom: 48px;
   margin-left: 233px;
+}
+
+.section-2 {
+  display: flex;
+  align-items: center;
+  gap: 120px;
+  margin-bottom: 183px;
+}
+.section-2 .text-right h2 {
+  width: 644px;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 133%;
+  color: #303031;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.section-2 .text-right p {
+  width: 644px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 144%;
+  letter-spacing: -0.02em;
+  color: #303031;
+}
+.section-2 .img .img-style {
+  position: relative;
+}
+.section-2 .img .img-style .img-1 {
+  z-index: 2;
+}
+.section-2 .img .img-style .img-style-1 .img-2 {
+  position: absolute;
+  z-index: -1;
+  top: 16px;
+  left: 16px;
+}
+
+.section-3 {
+  display: flex;
+  align-items: center;
+  gap: 120px;
+}
+.section-3 h2 {
+  width: 644px;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 133%;
+  color: #303031;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.section-3 p {
+  width: 644px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 144%;
+  letter-spacing: -0.02em;
+  color: #303031;
 }/*# sourceMappingURL=style.css.map */
