--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ button {
 }
 .hero .hero-text h2 {
   width: 608px;
+  font-family: "Berkshire Swash", serif;
   font-weight: 400;
   font-size: 64px;
   line-height: 125%;
@@ -76,6 +77,7 @@ button {
 }
 .hero .hero-text p {
   width: 608px;
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 133%;
@@ -133,6 +135,7 @@ button {
 
 .center-text .text h2 {
   width: 895px;
+  font-family: "Lilita One", sans-serif;
   font-size: 48px;
   text-align: center;
   color: #303031;
@@ -157,6 +160,7 @@ button {
 }
 .section-2 .text-right h2 {
   width: 644px;
+  font-family: "Berkshire Swash", serif;
   font-weight: 400;
   font-size: 48px;
   line-height: 133%;
@@ -166,6 +170,7 @@ button {
 }
 .section-2 .text-right p {
   width: 644px;
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 144%;
@@ -189,6 +194,7 @@ button {
   display: flex;
   align-items: center;
   gap: 120px;
+  margin-bottom: 183px;
 }
 .section-3 h2 {
   width: 644px;
@@ -200,6 +206,30 @@ button {
   margin-bottom: 24px;
 }
 .section-3 p {
+  width: 644px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 144%;
+  letter-spacing: -0.02em;
+  color: #303031;
+}
+
+.section-4 {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  margin-bottom: 183px;
+}
+.section-4 .text-4s h2 {
+  width: 644px;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 133%;
+  color: #303031;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.section-4 .text-4s p {
   width: 644px;
   font-weight: 400;
   font-size: 18px;
