--- a/scss/all-blocks/_center-text.scss
+++ b/scss/all-blocks/_center-text.scss
@@ -5,7 +5,8 @@
 
     h2 {
         width: 895px;
-        
+        font-family: "Lilita One", sans-serif;
+
         font-size: 48px;
         text-align: center;
         color: #303031;
