--- a/scss/all-blocks/_hero.scss
+++ b/scss/all-blocks/_hero.scss
@@ -9,6 +9,7 @@
         h2 {
 
             width: 608px;
+            font-family: "Berkshire Swash", serif;
             font-weight: 400;
             font-size: 64px;
             line-height: 125%;
@@ -18,6 +19,8 @@
 
         p {
             width: 608px;
+            font-family: "Raleway", sans-serif;
+
             font-weight: 400;
             font-size: 24px;
             line-height: 133%;
