--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ span {
 
 button {
   background: transparent;
+  display: inline-block;
 }
 
 .container {
@@ -235,5 +236,66 @@ button {
   font-size: 18px;
   line-height: 144%;
   letter-spacing: -0.02em;
+  color: #303031;
+}
+
+.section-5 .text h2 {
+  width: 895px;
+  font-family: "Lilita One", sans-serif;
+  font-size: 48px;
+  text-align: center;
+  color: #303031;
+  margin-top: 160px;
+  margin-bottom: 24px;
+  margin-left: 230px;
+}
+.section-5 .text p {
+  width: 895px;
+  font-size: 18px;
+  text-align: center;
+  color: #303031;
+  margin-bottom: 48px;
+  margin-left: 233px;
+}
+
+.section-6 .big {
+  width: 427px;
+  padding: 25px;
+  border-radius: 16px;
+  box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+  background: var(--white);
+  margin-bottom: 60px;
+}
+.section-6 .big h3 {
+  width: 379px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 133%;
+  letter-spacing: -0.02em;
+  color: #303031;
+}
+.section-6 .big p {
+  width: 379px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: -0.02em;
+  color: #303031;
+  margin-bottom: 24px;
+}
+.section-6 .big button {
+  padding: 4px 8px;
+  border-radius: 40px;
+  border: none;
+  background: #71A894;
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+.section-6 .big .apply {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: right;
   color: #303031;
 }/*# sourceMappingURL=style.css.map */
