--- a/scss/all-blocks/_section-6.scss
+++ b/scss/all-blocks/_section-6.scss
@@ -1,56 +1,135 @@
 .section-6 {
 
-    .big {
-        width: 427px;
-        padding: 25px;
-        border-radius: 16px;
-        box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
-        background: var(--white);
-        margin-bottom: 60px;
+    .cards {
 
 
-        h3 {
-            width: 379px;
-            font-weight: 700;
-            font-size: 18px;
-            line-height: 133%;
-            letter-spacing: -0.02em;
-            color: #303031;
-        }
+        ul {
 
-        p {
-            width: 379px;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 150%;
-            letter-spacing: -0.02em;
-            color: #303031;
-            margin-bottom: 24px;
-        }
+            display: flex;
+            align-items: center;
+            gap: 24px;
 
 
-    
-
-
-            button {
-                padding: 4px 8px;
-                border-radius: 40px;
-                border: none;
-                background: #71A894;
-                color: #fff;
+            li {
                 display: flex;
-                align-items: center;
+                flex-direction: column;
+                border-radius: 16px;
+                width: 427px;
+                height: 240px;
+                box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+                background: #FFFFFF;
+                margin-bottom: 48px;
+
+                a {
+                    padding: 24px 24px 28px 24px;
+
+
+                    h3 {
+                        width: 380px;
+                        font-weight: 700;
+                        font-size: 18px;
+                        line-height: 133%;
+                        color: #303031;
+                        margin-bottom: 16px;
+                    }
+
+                    p {
+                        width: 380px;
+                        font-weight: 500;
+                        font-size: 16px;
+                        line-height: 150%;
+                        color: #303031;
+                        margin-bottom: 24px;
+                    }
+
+                    button {
+                        gap: 3px;
+                        padding: 4px 8px 4px 8px;
+                        border-radius: 40px;
+                        border: none;
+                        background: #71A894;
+                        color: #fff;
+                        font-weight: 500;
+                        font-size: 16px;
+                        line-height: 150%;
+                        letter-spacing: -0.02em;
+                    }
+
+                    .in-box {
+                        display: flex;
+                        align-items: center;
+                        gap: 193px;
+                    }
+                }
+            }
+
+            .small {
+                display: flex;
+                flex-direction: column;
+                border-radius: 16px;
+                width: 427px;
+                height: 216px;
+                box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+                background: #FFFFFF;
+
+                a {
+                    padding: 24px 24px 28px 24px;
+
+
+                    h3 {
+                        width: 380px;
+                        font-weight: 700;
+                        font-size: 18px;
+                        line-height: 133%;
+                        color: #303031;
+                        margin-bottom: 16px;
+                    }
+
+                    p {
+                        width: 380px;
+                        font-weight: 500;
+                        font-size: 16px;
+                        line-height: 150%;
+                        color: #303031;
+                        margin-bottom: 24px;
+                    }
+
+                    button {
+                        gap: 3px;
+                        padding: 4px 8px 4px 8px;
+                        border-radius: 40px;
+                        border: none;
+                        background: #71A894;
+                        color: #fff;
+                        font-weight: 500;
+                        font-size: 16px;
+                        line-height: 150%;
+                        letter-spacing: -0.02em;
+
+                    }
+
+                    .in-box {
+                        display: flex;
+                        align-items: center;
+                        gap: 193px;
+                    }
                 }
 
-                .apply{
-font-weight: 600;
-font-size: 16px;
-line-height: 150%;
-text-align: right;
-color: #303031;
 
+                .btn {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 20px 24px;
+                    border-radius: 8px;
+                    background: #303031;
+                    color: #fff;
+                    font-weight: 700;
+                    font-size: 18px;
+                    line-height: 133%;
+                    text-align: center;
                 }
             }
         }
-        
-    
+    }
+}
